# strangers

./: .env  .gitignore  Cargo.toml  Makefile  README.md  db.sql  strangers.service
certs/: emacsvi.com.cer  emacsvi.com.key
src/: arg.rs  config.rs  error.rs  form.rs  hcaptcha.rs  lib.rs  main.rs  model.rs  password.rs  rdb.rs  session.rs
src/cache/: mod.rs  redisdb.rs  sleddb.rs
src/db/: admin.rs  medicinal.rs  mod.rs  pagination.rs  select_stmt.rs
src/handler/: auth.rs  helper.rs  home.rs  mod.rs  redirect.rs
src/handler/backend/: admin.rs  excel.rs  index.rs  medicinal.rs  mod.rs
src/html/: auth.rs  mod.rs
src/html/backend/: admin.rs  medicinal.rs  mod.rs
src/middleware/: admin_auth.rs
src/sms/: mod.rs  send.rs  sms.rs
templates/: err.html
templates/auth/: login.html
templates/backend/: base.html  base_with_datetime.html
templates/backend/medicinal/: add.html  edit.html  index.html  upload.html
templates/backend/subject/: index.html
