[package]
name = "strangers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
askama = "0.11.1"
axum = {version = "0.4.8", features = ["multipart"] }
axum-server = { version = "0.3", features = ["tls-rustls"] }
tower-http = { version = "0.2.5", features = ["fs"] }
bcrypt = "0.12.0"
chrono = "0.4.19"
config = {version = "0.12.0", git = "https://github.com/mehcode/config-rs.git" }
dotenv = "0.15.0"
rand = "0.8.5"
regex = "1.5.5"
reqwest = { version = "0.11.10", features = ["json"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
thiserror = "1.0.30"
tokio = { version = "1.17.0", features = ["full", "time"] }
tracing = "0.1.32"
tracing-subscriber = { version = "0.3.9", features = ["env-filter"] }
# postgres
tokio-postgres = {version = "0.7", features = ["with-chrono-0_4"] }
tokio-pg-mapper = "0.2"
tokio-pg-mapper-derive = "0.2"
deadpool-postgres = { version = "0.10", features = ["serde"] }
# redis
redis = { version = "0.21", features = ["tokio-comp", "aio"] }
uuid =  {  version = "0.8", features = ["v4", "serde"]}
tower = "0.4.12"
calamine = { version = "0.18.0", features = ["dates"] }
aliyun_sdk = "0.2.0"
tower-cookies = "0.5.1"
csv = "1.1.6"
dateparser = {version = "0.1.6", path = "../belt/dateparser" }
lazy_static = "1.4.0"
encoding_rs = "0.8.30"
sled = "0.34.7"
tokio-util = "0.7.1"
